JPN: Finishing unit tests
