# internal/pkg/models/payment.go
@@ -1,0 +1,13 @@
+package models
+
+type (
+	//
+	ProcessPaymentRequest struct {
+		CardNumber  string `json:"card_number"`
+		ExpiryMonth int    `json:"expiry_month"`
+		ExpiryYear  int    `json:"expiry_year"`
+		Currency    string `json:"currency"`
+		Amount      int    `json:"amount"`
+		CVV         string `json:"cvv"`
+	}
+)
